--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,3 +3,7 @@ uvicorn==0.27.1
 websockets==12.0
 firebase_admin==6.4.0
 pandas==2.0.1
+Pillow==9.5.0
+tensorflow== 2.16.1
+joblib==1.2.0
+python-multipart==0.0.9
