--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     command: bash -c 'uvicorn app.main:app --reload --host 0.0.0.0 --port 8000'
     volumes:
       - .:/app
-      - ./app/model/result:/app/app/model/result
+      - ./app/ai/result:/app/app/ai/result
     working_dir: /app
     ports:
       - ${PORT}:8000
